--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
 
     listen 80;
-    server_name 127.0.0.1;
+    server_name 84.201.143.38 nicefoodgram.servebeer.com;
 
 
     location /static/admin/ {
@@ -22,12 +22,12 @@ server {
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Host $host;
         proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend:8080;
     }
 
     location /admin/ {
         proxy_set_header Host $http_host;
-        proxy_pass http://backend:8000/admin/;
+        proxy_pass http://backend:8080/admin/;
     }
 
     location /api/docs/ {
